Fix margin spacing

--- a/index.css
+++ b/index.css
@@ -39,3 +39,7 @@ a:visited {
 .text-left {
     margin-left: 15%;
 }
+
+.text-left-more {
+    margin-left: 30%;
+}
